--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,15 @@ h1 {
   font-weight: 300;
 }
 
+ul {
+  list-style: none;
+}
+
+ul>li>a {
+  text-decoration: none;
+  padding: .4rem;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -46,4 +55,14 @@ main {
 
 input[type="radio"] {
   margin-left: 10px;
+
+}
+
+.btn {
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
 }
