--- a/hand/style.css
+++ b/hand/style.css
@@ -38,6 +38,10 @@ body {
     /* visibility: hidden; */
 }
 
+#search {
+    padding-left: .5rem;
+}
+
 @media only screen and (max-width: 800px) {
     .wrapper {
         display: flex;
