--- a/hand/style.css
+++ b/hand/style.css
@@ -4,6 +4,11 @@ body {
     overflow: hidden;
 }
 
+/* make mobile hamburer a little to the right */
+body>a>i {
+    margin: 1.4rem;
+}
+
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 3fr;
