--- a/hand/style.css
+++ b/hand/style.css
@@ -9,6 +9,22 @@ body>a>i {
     margin: 1.4rem;
 }
 
+#logo {
+    margin: 1rem;
+    font-size: 30px;
+    display: inline;
+}
+
+.special {
+    color: red !important;
+    background-color: white !important;
+    font-weight: bold;
+    font-size: 20px;
+    /* font-family: cursive; */
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 3fr;
