--- a/hand/style.css
+++ b/hand/style.css
@@ -13,10 +13,108 @@ body>a>i {
     margin: 1.4rem;
 }
 
-#logo {
-    /* margin: 1rem; */
-    font-size: 30px;
+.example_a {
+    color: #000 !important;
+    text-transform: uppercase;
+    background: #c3c3c3;
+    padding: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    border: none;
+}
+
+.example_a:hover {
+    /* background: #434343; */
+    letter-spacing: 1px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+    box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
+    transition: all 0.4s ease 0s;
+}
+
+#second {
+    transition: .5s;
+}
+
+#today {
+    font-weight: bold;
+}
+
+#weather {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    font-weight: 600;
+}
+
+.collapsible-body:hover {
+    color: #000;
+    background-color: #00ff00;
+}
+
+#weather>div {
+    /* padding: 10px, 10px; */
+    padding: 0 20px;
+    align-items: center;
+    font-size: ;
+}
+
+#wet {
+    font-weight: bold;
+    /* margin-left: 90px; */
+    margin: 0 90px;
+}
+
+
+#cards .row {
+    width: 100%;
+    margin: 0;
+}
+
+.top {
+    transition: .04s;
+}
+
+.top>ul {
+    display: flex;
+    background: linear-gradient(40deg, rgba(2, 0, 36, 1) 0%, rgba(227, 227, 232, 1) 0%, rgba(1, 212, 255, 1) 10%);
+}
+
+.ok {
     display: inline;
+    float: right;
+}
+
+
+#below {
+    font-size: 17px;
+    font-weight: bold;
+    /* display: flex; */
+    /* align-items: flex-start; */
+}
+
+#below>img {
+    margin-right: 8px;
+}
+
+.top>ul>li {
+    /* margin: 1rem; */
+    border: 1rem;
+    flex-grow: 1;
+    /* border: solid; */
+    padding: 1rem 1rem 0 1rem;
+}
+
+.top>li:nth-of-type(1) {
+    flex-grow: .4;
+}
+
+.top>li:nth-of-type(4) {
+    flex-grow: 10;
+}
+
+.top>li:nth-of-type(3) {
+    flex-grow: 8;
 }
 
 .special {
@@ -34,6 +132,11 @@ body>a>i {
     grid-template-columns: 1fr 3fr;
     /* grid-template-rows: 800px; */
     grid-auto-rows: 1fr;
+}
+
+#call {
+    /* call icon not visisible non mobile */
+    display: none;
 }
 
 .box {
@@ -77,11 +180,21 @@ body>a>i {
 .collapsible-body {
     padding: .5rem 2rem;
 }
+#first {
+    height: 97vh;
+}
 
 @media only screen and (max-width: 800px) {
     .wrapper {
         display: flex;
         flex-direction: column;
+    }
+    #weather {
+        display: none;
+
+    }
+    #today {
+    display: none;
     }
 
     .gridCard {
