--- a/hand/style.css
+++ b/hand/style.css
@@ -1,7 +1,8 @@
 body {
     background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(227, 227, 232, 1) 0%, rgba(0, 212, 255, 1) 100%);
+    /* background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(227, 227, 232, 1) 0%, rgba(0, 212, 255, 1) 100%); */
     overflow: hidden;
+    background-image: url("wood4.jpg");
 }
 
 ul {
@@ -61,10 +62,13 @@ body>a>i {
 
 #wet {
     font-weight: bold;
+    font-size: 18px;
     /* margin-left: 90px; */
     margin: 0 90px;
 }
-
+i.material-icons {
+    color: white;
+}
 
 #cards .row {
     width: 100%;
@@ -73,13 +77,13 @@ body>a>i {
 
 .top {
     transition: .04s;
-    background-image: url("wood2.jpg")
+    /* background-image: url("wood2.jpg") */
 }
 
 .top>ul {
     display: flex;
     /* background: linear-gradient(40deg, rgba(2, 0, 36, 1) 0%, rgba(227, 227, 232, 1) 0%, rgba(1, 212, 255, 1) 10%); */
-    background-image: url("wood2.jpg")
+    /* background-image: url("wood2.jpg") */
 }
 
 .ok {
