changed start font-size

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ i.material-icons {
 
 
 #below {
-    font-size: 17px;
+    font-size: 15;
     font-weight: bold;
     /* display: flex; */
     /* align-items: flex-start; */
